First commit front end Route set

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,13 @@
+$color1 : #111 ;
+$color2 : #fff ;
+$color3 : #fffcf3 ;
+$color4 : #91adb8;
+$color5 : #4E6C7B ;
+$color6 : #295369 ;
+$color7 : #444444 ;
+
+$colorSec1 : #F0BA1A ;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +21,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
